sua lai phan Login va xong phan Order

--- a/SBAdmin/SBAdmin/app/views/menu/network/create.html
+++ b/SBAdmin/SBAdmin/app/views/menu/network/create.html
@@ -34,8 +34,8 @@
                 <br />
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button class="btn btn-primary" ng-click="create(nwCreate)">Submit</button>
-                        <a class="btn btn-default pull-right" href="#/thiet-lap-danh-muc/nha-mang">Cancel</a>
+                        <button class="btn btn-primary" ng-click="create(nwCreate)">Lưu</button>
+                        <a class="btn btn-default" href="#/thiet-lap-danh-muc/nha-mang">Hủy</a>
                     </div>
                 </div>
             </form>
