--- a/SBAdmin/Views/Home/Login.cshtml
+++ b/SBAdmin/Views/Home/Login.cshtml
@@ -30,7 +30,7 @@
                         <form role="form">
                             <fieldset>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="email" name="email" ng-model="userSignIn.Email" placeholder="Enter email" autofocus />
+                                    <input type="text" class="form-control" id="username" name="username" ng-model="userSignIn.UserName" placeholder="Enter UserName" autofocus />
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" name="password" type="password" ng-model="userSignIn.Password" placeholder="Password" />
