--- a/SBAdmin/SBAdmin/app/views/authentication/authentication.html
+++ b/SBAdmin/SBAdmin/app/views/authentication/authentication.html
@@ -1,12 +1,7 @@
 ﻿<a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
     <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
 </a>
-<ul class="dropdown-menu dropdown-user" ng-hide="currentUser()">
-    <li>
-        <a href="#/signIn"><i class="fa fa-sign-in fa-fw"></i> Sign In</a>
-    </li>
-</ul>
-<ul class="dropdown-menu dropdown-user" ng-show="currentUser()">
+<ul class="dropdown-menu dropdown-user">
     <li>
         <a href="#/profile"><i class="fa fa-user fa-fw"></i> User Profile</a>
     </li>
