--- a/SBAdmin/SBAdmin/app/views/menu/sim/create.html
+++ b/SBAdmin/SBAdmin/app/views/menu/sim/create.html
@@ -47,8 +47,8 @@
                 <br />
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button class="btn btn-primary" ng-click="create(SIM)">Submit</button>
-                        <a class="btn btn-default pull-right" href="#/thiet-lap-danh-muc/loai-sim">Hủy bỏ</a>
+                        <button class="btn btn-primary" ng-click="create(SIM)">Lưu</button>
+                        <a class="btn btn-default" href="#/quan-ly-sim">Hủy bỏ</a>
                     </div>
                 </div>
             </form>
