--- a/SBAdmin/SBAdmin/app/views/menu/sim/index.html
+++ b/SBAdmin/SBAdmin/app/views/menu/sim/index.html
@@ -4,36 +4,17 @@
             <h1 class="page-header">Quản lý SIM</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Danh sách SIM
-                </div>
-                <div class="panel-body">
-                    <!--<div class="form-inline" style="padding:0 20px">
-                        <div class="form-group-sm">
-                            <label style="font-weight:initial">
-                                Show
-                                <select class="form-control">
-                                    <option>50</option>
-                                    <option>100</option>
-                                    <option>200</option>
-                                    <option>500</option>
-                                </select> entries
-                            </label>
-                        </div>
-                    </div>
-                    <hr />-->
+    <div class="row">    
+                <div class="panel-body">                    
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Số</th>
-                                <th>Nhà mạng</th>
-                                <th>Loại sim</th>
-                                <th>Nhà cung cấp</th>
-                                <th>Trạng thái</th>
-                                <th>Giá</th>
+                                <th style="border-bottom:none;">Số</th>
+                                <th style="border-bottom:none;">Nhà mạng</th>
+                                <th style="border-bottom:none;">Loại sim</th>
+                                <th style="border-bottom:none;">Nhà cung cấp</th>
+                                <th style="border-bottom:none;">Giá</th>
+                                <th class="text-center" style="border-bottom:none; width:90px;">Trạng thái</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -41,9 +22,9 @@
                                 <td><a href="#/quan-ly-sim/sua/{{sim.ID}}">{{sim.Number}}</a></td>
                                 <td><span><span><img src="{{sim.Network.image}}" height="30" width="30" /> </span>{{sim.Network.Name}}</span></td>
                                 <td>{{sim.SimType}}</td>
-                                <td>{{sim.Supplier}}</td>
-                                <td>{{sim.Status}}</td>
+                                <td>{{sim.Supplier}}</td>                                
                                 <td>{{sim.Price|number:0}}</td>
+                                <td>{{sim.Status}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -56,7 +37,5 @@
                         <li><a href="#">5</a></li>
                     </ul>-->
                 </div>
-            </div>
-        </div>
     </div>
 </div>
