--- a/SBAdmin/SBAdmin/app/views/menu/simtype/create.html
+++ b/SBAdmin/SBAdmin/app/views/menu/simtype/create.html
@@ -13,13 +13,7 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="name" name="name" ng-model="stCreate.Name" placeholder="Nhập tên loại SIM" />
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="condition">Điều kiện</label>
-                    <div class="col-sm-10">
-                        <input class="form-control" name="condition" type="text" ng-model="stCreate.Condition" placeholder="Nhập điều kiện" />
-                    </div>
-                </div>
+                </div>                
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="type">Loại SIM:</label>
                     <div class="col-sm-10">
@@ -29,11 +23,17 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="condition">Điều kiện</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" rows="3" ng-model="stCreate.Condition"></textarea>
+                    </div>
+                </div>
                 <br />
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button class="btn btn-primary" ng-click="create(stCreate)">Submit</button>
-                        <a class="btn btn-default pull-right" href="#/thiet-lap-danh-muc/loai-sim">Hủy bỏ</a>
+                        <button class="btn btn-primary" ng-click="create(stCreate)">Lưu</button>
+                        <a class="btn btn-default" href="#/thiet-lap-danh-muc/loai-sim">Hủy bỏ</a>
                     </div>
                 </div>
             </form>
