import SIM from excel

--- a/SBAdmin/SBAdmin/app/views/menu/sim/index.html
+++ b/SBAdmin/SBAdmin/app/views/menu/sim/index.html
@@ -29,6 +29,7 @@
                         </tbody>
                     </table>
                     <a class="btn btn-primary" role="button" href="#/quan-ly-sim/them">Thêm</a>
+                    <a class="btn btn-primary" role="button" href="#/quan-ly-sim/import">Import</a>
                     <!--<ul class="pagination pull-right">
                         <li><a href="#">1</a></li>
                         <li class="active"><a href="#">2</a></li>
