--- a/SBAdmin/Views/Home/Login.cshtml
+++ b/SBAdmin/Views/Home/Login.cshtml
@@ -10,7 +10,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Đăng nhập</title>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/SBAdmin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/SBAdmin/bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/SBAdmin/dist/css/sb-admin-2.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
